--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+/UnityProject/Temp
+/UnityProject/Library
+/UnityProject/obj
+/UnityProject/Assets/MGS.Packages/ScriptTemplateEditor.meta
+/UnityProject/Assets/MGS.Packages/ScriptTemplateEditor
