--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ crashlytics-build.properties
 /UnityProject/obj
 /UnityProject/Assets/MGS.Packages/ScriptTemplateEditor.meta
 /UnityProject/Assets/MGS.Packages/ScriptTemplateEditor
+/*.vsconfig
+/UserSettings
